examples/026-ArgoCD/03-working-with-waveshooks/repo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  name: synctest
spec: {}
