examples/026-ArgoCD/03-working-with-waveshooks/repo/presync.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: presync-pod
  namespace: synctest
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    argocd.argoproj.io/hook: PreSync
  labels:
    app.kubernetes.io/name: presync-pod
spec:
  containers:
  - name: myapp-container
    image: registry.access.redhat.com/ubi8/ubi
    command: ['bash', '-c', 'sleep 3 ; echo Presync']
    imagePullPolicy: Always
  restartPolicy: "Never"
