examples/026-ArgoCD/03-working-with-waveshooks/repo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wave-test-ingress
  namespace: synctest
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  ingressClassName: nginx
  rules:
    - host: synctest.singleton.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bgd
                port:
                  number: 8080
